# crowd-counting-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  sha.yaml  shb.yaml
notebooks/: colab_training.ipynb
scripts/: evaluate.py  export_onnx.py  infer.py  train.py
src/crowd_counting/: __init__.py  config.py
src/crowd_counting/engine/: __init__.py  evaluator.py  trainer.py
src/crowd_counting/models/: __init__.py  csrnet.py
src/crowd_counting/serving/: __init__.py  gradio_app.py
src/crowd_counting/utils/: __init__.py  checkpoint.py  device.py  visualization.py
tests/: test_dataset.py  test_density_map.py  test_model.py
